fix class_periods table

--- a/test/fixtures/class_periods.yml
+++ b/test/fixtures/class_periods.yml
@@ -2,18 +2,12 @@
 
 one:
   course_id: 1
-  individual_class_id: MyString
-  integer: MyString
-  start_time: MyString
-  datetime: MyString
-  end_time: MyString
-  date_time: MyString
+  individual_class_id: 1
+  start_time: 2022-09-30 15:52:37
+  end_time: 2022-09-30 15:52:37
 
 two:
   course_id: 1
-  individual_class_id: MyString
-  integer: MyString
-  start_time: MyString
-  datetime: MyString
-  end_time: MyString
-  date_time: MyString
+  individual_class_id: 1
+  start_time: 2022-09-30 15:52:37
+  end_time: 2022-09-30 15:52:37
