--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -2,7 +2,7 @@
 
 one:
   calendar_id: 1
-  course_name: MyString
+  name: MyString
   start_date: 2022-10-21
   end_date: 2022-10-21
   location: MyString
@@ -13,7 +13,7 @@ one:
 
 two:
   calendar_id: 1
-  course_name: MyString
+  name: MyString
   start_date: 2022-10-21
   end_date: 2022-10-21
   location: MyString
