--- a/test/fixtures/other_events.yml
+++ b/test/fixtures/other_events.yml
@@ -2,18 +2,18 @@
 
 one:
   calendar_id: 1
-  other_name: MyString
+  name: MyString
   start_time: 2022-10-21 15:06:09
   end_time: 2022-10-21 15:06:09
 
 two:
   calendar_id: 1
-  other_name: MyString
+  name: MyString
   start_time: 2022-10-21 15:06:09
   end_time: 2022-10-21 15:06:09
 
 test_1:
   calendar_id: 2
-  other_name: Elina_Birthday
+  name: Elina_Birthday
   start_time: 2022-10-21
   end_time: 2022-10-22
