--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,12 +4,12 @@ one:
   first_name: MyString
   last_name: MyString
   student_id: 1
-  email: MyString
+  email: MyString1
   password_digest: <%= User.digest('password') %>
 
 two:
   first_name: MyString
   last_name: MyString
   student_id: 1
-  email: MyString
+  email: MyString2
   password_digest: <%= User.digest('password') %>
