--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,50 @@
-/.bundle
-/vendor/bundle/
-/vendor/ruby/
-
-/log/*
-/tmp/*
-
-
-**.war
 *.rbc
-*.sassc
-.redcar/
-.sass-cache
-/config/config.yml
-/config/database.yml
-/coverage.data
-/coverage/
-/db/*.javadb/
+capybara-*.html
+.rspec
 /db/*.sqlite3
-/doc/api/
-/doc/app/
-/doc/features.html
-/doc/specs.html
-/public/cache
-/public/stylesheets/compiled
-/public/system/*
-/spec/tmp/*
-/cache
-/capybara*
-/capybara-*.html
-/gems
-/specifications
+/db/*.sqlite3-journal
+/db/*.sqlite3-[0-9]*
+/public/system
+/coverage/
+/spec/tmp
+*.orig
 rerun.txt
 pickle-email-*.html
 
+# Ignore all logfiles and tempfiles.
+/tmp/*
+tmp/cache
+!/log/.keep
+!/tmp/.keep
 
-.DS_Store
+# TODO Comment out this rule if you are OK with secrets being uploaded to the repo
+config/initializers/secret_token.rb
+config/master.key
 
+# Only include if you have production secrets in this file, which is no longer a Rails default
+# config/secrets.yml
 
-
-.idea
-
-/*.tmproj
-
-**.swp
-
+# dotenv, dotenv-rails
+# TODO Comment out these rules if environment variables can be committed
 .env
+.env*.local
+
+## Environment normalization:
+/.bundle
+/vendor/bundle
+
+# these should all be checked in to normalize the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
+
+# if using bower-rails ignore default bower_components path bower.json files
+/vendor/assets/bower_components
+*.bowerrc
+bower.json
+
+# Ignore pow environment settings
 .powenv
 
 # Ignore Byebug command history file.
@@ -61,7 +61,7 @@ node_modules/
 # Ignore yarn files
 /yarn-error.log
 yarn-debug.log*
-.yarn-integrit
+.yarn-integrity
 
 # Ignore uploaded files in development
 /storage/*
