--- a/test/fixtures/holidays.yml
+++ b/test/fixtures/holidays.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 20005
   calendar_id: 1
-  name: MyString
-  date: 2022-10-21 15:10:36
-  holiday_type: MyString
+  name: Christmas
+  date: 2022-12-25 15:10:36
+  holiday_type: Christian
 
 two:
+  id: 20002
   calendar_id: 1
   name: MyString
-  date: 2022-10-21 15:10:36
-  holiday_type: MyString
+  date: 2022-07-04 15:10:36
+  holiday_type: USA
