fixed errors from fixture

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -6,10 +6,9 @@ one:
   start_date: 2022-10-21
   end_date: 2022-10-21
   location: MyString
-  professor_first_name: MyString
-  professor_last_name: MyString
+  professor_name: MyString
   repetition_frequency: MyString
-  url: MyString
+
 
 two:
   calendar_id: 1
@@ -17,7 +16,6 @@ two:
   start_date: 2022-10-21
   end_date: 2022-10-21
   location: MyString
-  professor_first_name: MyString
-  professor_last_name: MyString
+  professor_name: MyString
   repetition_frequency: MyString
-  url: MyString
+
