--- a/test/fixtures/calendars.yml
+++ b/test/fixtures/calendars.yml
@@ -3,11 +3,11 @@
 one:
   calendar_name: MyString1
   user_id: 1
-  shared: false
+  public: false
   invite_token: MyString1
 
 two:
   calendar_name: MyString2
   user_id: 2
-  shared: false
+  public: false
   invite_token: MyString2
