--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -2,20 +2,12 @@
 
 one:
   calendar_id: 1
-  name: MyString
-  start_date: 2022-10-21
-  end_date: 2022-10-21
-  location: MyString
-  professor_name: MyString
-  repetition_frequency: MyString
-
-
-two:
-  calendar_id: 1
-  name: MyString
-  start_date: 2022-10-21
-  end_date: 2022-10-21
-  location: MyString
-  professor_name: MyString
-  repetition_frequency: MyString
+  name: COSCI_CLASS
+  start_date: 2022-10-01
+  end_date: 2022-10-10
+  start_time: "10:00AM"
+  end_time: "12:00PM"
+  location: GZANG
+  professor_name: SALAS
+  repetition_frequency: MWH
 
