--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -2,12 +2,14 @@
 
 one:
   calendar_id: 1
-  name: MyString
-  due_date: 2022-10-21 15:11:19
+  name: Test_Assignment
+  due_date: 2022-10-21
+  due_time: <%= Time.zone.local(2000, 1, 1, 10, 0, 0) %>
   course_id: 1
 
 two:
   calendar_id: 1
-  name: MyString
-  due_date: 2022-10-21 15:11:19
-  course_id: 1
+  name: Test_Assignment2
+  due_date: 2022-11-22
+  due_time: <%= Time.zone.local(2000, 1, 1, 11, 0, 0) %>
+  course_id: 2
