--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "fast-refugee-01044" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
+          heroku_api_key: 5be4341e-cf0d-4cc1-9cac-0b4e22916cfc
+          heroku_app_name: "rocky-hollows-83897" #Must be unique in Heroku
+          heroku_email: "davidshapiro@brandeis.edu"
