--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -3,13 +3,13 @@
 one:
   calendar_id: 1
   name: Test_Assignment
-  due_date: 2022-10-21
+  due_date: <%= Date.new(2022, 10, 21) %>
   due_time: <%= Time.zone.local(2000, 1, 1, 10, 0, 0) %>
   course_id: 1
 
 two:
   calendar_id: 1
   name: Test_Assignment2
-  due_date: 2022-11-22
+  due_date: <%= Date.new(2022, 10, 22) %>
   due_time: <%= Time.zone.local(2000, 1, 1, 11, 0, 0) %>
   course_id: 2
