--- a/test/fixtures/holidays.yml
+++ b/test/fixtures/holidays.yml
@@ -1,15 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 20005
   calendar_id: 1
   name: Christmas
-  date: 2022-12-25 15:10:36
+  date: 2022-12-25
   holiday_type: Christian
-
-two:
-  id: 20002
-  calendar_id: 1
-  name: MyString
-  date: 2022-07-04 15:10:36
-  holiday_type: USA
+  slug: Test
