--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -6,6 +6,9 @@
 # run tests and linters.
 name: "Ruby on Rails CI"
 on: [push]
+on:
+  pull_request:
+    branches: ["main", "development"]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -46,6 +49,8 @@ jobs:
         with:
           bundler-cache: true
       # Add or replace any other lints here
+      - name: Security audit dependencies
+        run: bin/bundler-audit --update
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Lint Ruby files
