most controller tests and start of system

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,3 +6,9 @@ one:
   last_name: Shapiro
   email: davidshapiro@brandeis.edu
   password_digest: <%= User.digest('password') %>
+
+two:
+  first_name: Fred
+  last_name: Test
+  email: test@brandeis.edu
+  password_digest: <%= User.digest('password') %>
