--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -9,4 +9,5 @@ one:
   end_time: <%= Time.zone.local(2000, 1, 1, 12, 0, 0) %>
   professor_name: SALAS
   repetition_frequency: MWH
+  slug: COSCI_CLASS
 
