--- a/test/fixtures/other_events.yml
+++ b/test/fixtures/other_events.yml
@@ -4,33 +4,38 @@ one:
   calendar_id: 1
   name: Item1
   date: 2022-10-21
-  start_time: <% Time.zone.local(2000, 1, 1, 8, 0, 0) %>
-  end_time: <% Time.zone.local(2000, 1, 1, 11, 0, 0) %>
+  start_time: <%= Time.zone.local(2000, 1, 1, 8, 0, 0) %>
+  end_time: <%= Time.zone.local(2000, 1, 1, 11, 0, 0) %>
+  slug: Item1
 
 two:
   calendar_id: 1
   name: Item2
   date: 2022-10-21
-  start_time: <% Time.zone.local(2000, 1, 1, 14, 0, 0) %>
-  end_time: <% Time.zone.local(2000, 1, 1, 17, 0, 0) %>
+  start_time: <%= Time.zone.local(2000, 1, 1, 14, 0, 0) %>
+  end_time: <%= Time.zone.local(2000, 1, 1, 17, 0, 0) %>
+  slug: Item2
 
 test_1:
   calendar_id: 2
   name: Elina_Birthday
   date: 2022-10-21
-  start_time: <% Time.zone.local(2000, 1, 1, 13, 0, 0) %>
-  end_time: <% Time.zone.local(2000, 1, 1, 16, 0, 0) %>
+  start_time: <%= Time.zone.local(2000, 1, 1, 13, 0, 0) %>
+  end_time: <%= Time.zone.local(2000, 1, 1, 16, 0, 0) %>
+  slug: test_1
 
 test_2:
   name: TestEvent
   calendar_id: 980190962
-  start_time: <% Time.zone.local(2000, 1, 1, 4, 0, 0) %>
-  end_time: <% Time.zone.local(2000, 1, 1, 10, 0, 0) %>
+  start_time: <%= Time.zone.local(2000, 1, 1, 4, 0, 0) %>
+  end_time: <%= Time.zone.local(2000, 1, 1, 10, 0, 0) %>
   date: 1900-11-27
+  slug: test_2
 
 test_3:
   name: TestEvent3
   calendar_id: 980190962
-  start_time: <% Time.zone.local(2000, 1, 1, 3, 0, 0) %>
-  end_time: <% Time.zone.local(2000, 1, 1, 9, 0, 0) %>
+  start_time: <%= Time.zone.local(2000, 1, 1, 3, 0, 0) %>
+  end_time: <%= Time.zone.local(2000, 1, 1, 9, 0, 0) %>
   date: 1900-11-27
+  slug: test_3
